# cnc-pcb-tools

./: README.md  make_pads.py  test.py  test_bezier.py
cnc_tools/: __init__.py  cutoff.py  gcode.py  pads.py  run.py  utils.py
cnc_tools/svg/: __init__.py  bezier.py  common.py  poly.py  readwrite.py
julia/: bezier.jl  main.jl  poly.jl  svg.jl
rust/bezier/: Cargo.toml
rust/bezier/src/: bezier.rs  gcode.rs  io-with-regex.rs  io.rs  main.rs  point.rs
rust/bezier/src/curves/: bezier.rs  mod.rs  path.rs  point.rs  svg.rs
rust/bezier/src/io/: mod.rs  path.rs  svg.rs
yaml/: cutoff-job.yaml
